improve error message display

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: page
 <div class="row">
   <div class="columns">
     <div>
-      <textarea id="paste" class="error" placeholder="Paste item information here"></textarea>
+      <textarea id="paste" placeholder="Paste item information here"></textarea>
       <small id="paste-error" class="error">Invalid input. Are you pasting <a href="#" data-reveal-id="help-modal">the right information</a>?</small>
     </div>
     <button id="lookup">Lookup</button>
-    <p><a href="#" data-reveal-id="help-modal">Help</a></p>
+    <a style="margin-left: 1em;" href="#" data-reveal-id="help-modal">Help</a>
     <div id="help-modal" class="reveal-modal small" data-reveal role="dialog">
       <p>Copy and paste this part of the item panel:</p>
       <img class="item-screenshot" src="images/selection-screenshot.png" alt="Screenshot of the Initium item panel, showing the appropriate text selection">
